# street-gaussians

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  kitti_0001.yaml  kitti_0020.yaml  test_5k.yaml
scripts/: render.py  smoke_test.py  train.py
street_gaussians/: __init__.py
street_gaussians/config/: __init__.py  loader.py  schema.py
street_gaussians/evaluation/: __init__.py  metrics.py  profiler.py
street_gaussians/models/: __init__.py  gaussians.py  math_utils.py  scene.py
street_gaussians/preprocessing/: __init__.py  decompose.py
street_gaussians/rendering/: __init__.py  demos.py  renderer.py
street_gaussians/training/: __init__.py  adc.py  loss.py  optimizer.py  trainer.py
street_gaussians/utils/: __init__.py  checkpoint.py  logger.py  video.py
